# exp-python-monorepo

./: README.md  docker-compose.yml
py/libs/lib1/: pyproject.toml
py/libs/lib1/mycorp/lib1/: myjoke.py  mysum.py
py/libs/lib2/: pyproject.toml
py/libs/lib2/mycorp/lib2/: mymult.py
py/libs/server_schemas/: pyproject.toml
py/libs/server_schemas/mycorp/server_schemas/: schema_x.py
py/projects/proj_a/: pyproject.toml  run_main.py
py/projects/proj_a/proj_a/: app_main.py  business_logic.py  main.py
py/projects/proj_a/proj_a/utils/: util_1.py  util_2.py
py/projects/proj_b/: Dockerfile  pyproject.toml
py/projects/proj_b/proj_b/: main.py
py/projects/project_a/: pyproject.toml
py/projects/project_a/project_a/: fastapi_app.py
py/projects/server_x/: Dockerfile  pyproject.toml
py/projects/server_x/server_x/: fastapi_app.py
