[tool.poetry]
name = "lib1"
version = "0.1.0"
description = ""
authors = ["Sigurd Pettersen <sigurd.pettersen@ceetronsolutions.com>"]
packages = [ { include = "mycorp" } ]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
