[tool.poetry]
name = "lib2"
version = "0.2.0"
description = ""
authors = ["Sigurd Pettersen <sigurd.pettersen@ceetronsolutions.com>"]
readme = "README.md"
packages = [ { include = "mycorp" } ]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
