[tool.poetry]
name = "server-schemas"
version = "0.1.0"
description = ""
authors = ["Sigurd Pettersen <sigurd.pettersen@ceetronsolutions.com>"]
packages = [ { include = "mycorp" } ]

[tool.poetry.dependencies]
pydantic = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
